# ROpenGL

./: Cargo.toml
models/: corona.mtl  cube.mtl
shaders/: explode.geom  instance.vert  lamp.frag  lamp.vert  outlineShader.frag  point.geom  point.vert  postpro.frag  postpro.vert  reflection.frag  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  transparentShader.frag  transparentShader.vert
src/: camera.rs  main.rs  mesh.rs  model.rs  shader.rs
