[package]
name = "ropengl"
version = "0.1.0"
authors = ["Tate <tatekennington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
gl = "0.14.0"
glfw = "0.37.0"
image = "0.22.0"
tobj = "1.0.0"
num = "0.2.1"
rand = "0.7.3"